# advent-of-camel-2025

./: .gitignore  COVER.md  LICENSE.md  Makefile  README.md  day4test.txt  dune  hardcaml_template_project.opam
docs/: day01.md  day03.md  day05.md  day1  day10  day10.md  day11.md  day2  day2.md  day3  day4  day4.md  day5  day6  day6.md  day8  day8.md  day9  day9.md
fpga/: Makefile  check_answers.py  dune  uart_wrapper.py
fpga/input_parser/: day01.ml  day02.ml  day02.mli  day03.ml  day04.ml  day04.mli  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  dune  util.ml  util.mli
fpga/inputs/: .gitignore  answers.json  embed.sh  outputs.json  sample4b.txt
fpga/run/: dune  run_day01.ml  run_day02.ml  run_day03.ml  run_day04.ml  run_day05.ml  run_day06.ml  run_day07.ml  run_day08.ml  run_day09.ml  run_day10.ml  run_day11.ml  run_day12.ml  run_days.ml  run_wrapper.ml
fpga/src/: blinky.ml  blinky.mli  build.ml  constraints.lpf  control.ml  day01.ml  day01.mli  day02.ml  day02.mli  day03.ml  day03.mli  day04.ml  day04.mli  day05.ml  day05.mli  day06.ml  day07.ml  day07.mli  day08.ml  day08.mli  day09.ml  day09.mli  day10.ml  day10.mli  day11.ml  day11.mli  day12.ml  day12.mli  day_stub.ml  dune  loadable_pseudo_dual_port_ram.ml  loadable_pseudo_dual_port_ram.mli  print_decimal_outputs.ml  print_decimal_outputs.mli  structural_inst.ml  structural_inst.mli  uart.ml  uart.mli  uart_test.ml  ulx3s.ml  (+5 more)
fpga/test/: day_test.ml  dune  harness.ml  sim_env.ml  test_day01.ml  test_day02.ml  test_day03.ml  test_day04.ml  test_day05.ml  test_day06.ml  test_day07.ml  test_day08.ml  (+8 more)
rtl/: dune
src/: day1.ml  day1_dial.ml  day1_dial.mli  day4.ml  day4_stream.ml  day4_toiletpaper.ml  day4_toiletpaper.mli  dune  metrics.ml
test/: day4test.txt  dune  test_day1.ml  test_day1_dial.ml  test_day3.ml  test_day4.ml  test_day4_toiletpaper.ml
(+9 files in other folders)
