opam-version: "2.0"
maintainer: "Christian Garry"
authors: ["Christian Garry"]
homepage: "https://github.com/cgarryZA/advent-of-camel"
bug-reports: "https://github.com/cgarryZA/advent-of-camel/issues"
dev-repo: "git+https://github.com/cgarryZA/advent-of-camel.git"
doc: "https://github.com/cgarryZA/advent-of-camel"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Advent of Code in Hardcaml"
description: "
A project including a hardcaml design, testbench, and RTL generation for several Advent Of Code submissions.
"
